test/compile-fail/resolution/pub/in-root-super/expected.txt
error: there are too many leading `super` keywords
  ┌─ ./test/compile-fail/resolution/pub/in-root-super/top.rhdl:1:8
  │
1 │ pub(in super) struct a {}
  │        ^^^^^ goes beyond the crate root
  │
  = try removing that `super` from the path

